# repo

./: LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yaml
repo/src/: main.py
repo/test/: test_main.py
