[tool.poetry]
name = "repo"
version = "0.1.0"
description = ""
authors = ["Danila Danko <br4ch1st0chr0n3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
